--- a/Training Day 1/Exercise day 1.ipynb
+++ b/Training Day 1/Exercise day 1.ipynb
@@ -7,25 +7,18 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "# Exercise 1 : เขียนโปรแกรมเพื่อตรวจสอบว่าตัวเลขที่ป้อนเข้ามาเป็นเลขคู่หรือเลขคี่\r\n",
-    "a.\tExample:\r\n",
-    "i.\tInput: 256\r\n",
-    "ii.\tOutput:es\r\n"
+    "# Exercise 1 : เขียนโปรแกรมเพื่อตรวจสอบว่าตัวเลขที่ป้อนเข้ามาเป็นเลขคู่หรือเลขคี่\n",
+    "a.\tExample:\n",
+    "i.\tInput: 256\n",
+    "ii.\tOutput:es\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "d80833b8-e0a1-4eb9-9774-8a8eb96536f4",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter number: 256\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -49,25 +42,18 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "# Exercise 2 : เขียนโปรแกรมตรวจสอบ string ที่ป้อนเข้ามาว่าเป็น palindrome หรือไม่ โดย palindrome คือคือ คำ วลี ตัวเลข หรือชุดข้อมูลที่อ่านจากซ้ายไปขวาและจากขวาไปซ้ายแล้วได้ค่าเดียวกัน ตัวอย่างเช่น คำว่า radar, rotator, 123321\r\n",
-    "a.\tExample:\r\n",
-    "i.\tInput: rotator\r\n",
-    "ii.\tOutput: es\r\n"
+    "# Exercise 2 : เขียนโปรแกรมตรวจสอบ string ที่ป้อนเข้ามาว่าเป็น palindrome หรือไม่ โดย palindrome คือคือ คำ วลี ตัวเลข หรือชุดข้อมูลที่อ่านจากซ้ายไปขวาและจากขวาไปซ้ายแล้วได้ค่าเดียวกัน ตัวอย่างเช่น คำว่า radar, rotator, 123321\n",
+    "a.\tExample:\n",
+    "i.\tInput: rotator\n",
+    "ii.\tOutput: es\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "86c00eb8-a89b-445d-bf48-50cbd111c853",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter text: rotator\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -94,30 +80,23 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "# Exercise 3 : เขียนโปรแกรมตัดเกรด โดยตรวจสอบว่าคะแนนที่ป้อนเข้ามาควรจะได้เกรดอะไร โดย score มากกว่าเท่ากับ 80 ได้เกรด A, มากกว่าเท่ากับ 70 แต่น้อยกว่า 80 ได้เกรด B, มากกว่าเท่ากับ 60 แต่น้อยกว่า 70 ได้เกรด C\r\n",
-    "a.\tExample:\r\n",
-    "i.\tInput: 80\r\n",
-    "ii.\tOutput A\r\n"
+    "# Exercise 3 : เขียนโปรแกรมตัดเกรด โดยตรวจสอบว่าคะแนนที่ป้อนเข้ามาควรจะได้เกรดอะไร โดย score มากกว่าเท่ากับ 80 ได้เกรด A, มากกว่าเท่ากับ 70 แต่น้อยกว่า 80 ได้เกรด B, มากกว่าเท่ากับ 60 แต่น้อยกว่า 70 ได้เกรด C\n",
+    "a.\tExample:\n",
+    "i.\tInput: 80\n",
+    "ii.\tOutput A\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "id": "46325e93-dbe0-4c88-8e06-5ce6401bed72",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter score: 80\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A\n"
+      "B\n"
      ]
     }
    ],
@@ -140,31 +119,23 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "# Exercise 4 : เขียนโปรแกรมแสดงเลขจำนวนเฉพาะ ที่มีค่ามากกว่าหรือเท่ากับ A แต่น้อยกว่าหรือเท่ากับ B\r\n",
-    "a.\tExample:\r\n",
-    "i.\tInput: 10 20\r\n",
-    "ii.\tOutput: 11, 13, 17,19\r\n"
+    "# Exercise 4 : เขียนโปรแกรมแสดงเลขจำนวนเฉพาะ ที่มีค่ามากกว่าหรือเท่ากับ A แต่น้อยกว่าหรือเท่ากับ B\n",
+    "a.\tExample:\n",
+    "i.\tInput: 10 20\n",
+    "ii.\tOutput: 11, 13, 17,19\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 5,
    "id": "3616c302-2a52-4cb3-b5a6-f81ab3c4a5b5",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter number begin: 10\n",
-      "Enter number end: 20\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[11, 13, 17, 19]\n"
+      "[5, 7, 11, 13]\n"
      ]
     }
    ],
@@ -189,23 +160,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 6,
    "id": "ae75734c-bd50-4308-8206-0040d0ae09a5",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter number begin: 10\n",
-      "Enter number end: 20\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11, 13, 17, 19\n"
+      "5, 7, 11, 13\n"
      ]
     }
    ],
@@ -241,32 +204,24 @@
    },
    "source": [
     "# Exercise 5 : เขียนโปรแกรมรับข้อความ แล้วแสดงผลข้อความตามจำนวนครั้ง A\n",
-    "a.\tInput: จำนวนครั้ง n ที่ต้องการแสดงผล และ ข้อความ m\r\n",
-    "b.\tOutput: ข้อความ m ที่แสดงผลซ้ำ n ครั้ง โดยเว้นวรรค 1 ช่อง\r\n",
-    "c.\tExample: \r\n",
-    "i.\tInput:3 เขียนโปรแกรมสนุกจังเลย\r\n",
-    "ii.\tOutput: เขียนโปรแกรมสนุกจังเลย เขียนโปรแกรมสนุกจังเลย เขียนโปรแกรมสนุกจเลย\r\n"
+    "a.\tInput: จำนวนครั้ง n ที่ต้องการแสดงผล และ ข้อความ m\n",
+    "b.\tOutput: ข้อความ m ที่แสดงผลซ้ำ n ครั้ง โดยเว้นวรรค 1 ช่อง\n",
+    "c.\tExample: \n",
+    "i.\tInput:3 เขียนโปรแกรมสนุกจังเลย\n",
+    "ii.\tOutput: เขียนโปรแกรมสนุกจังเลย เขียนโปรแกรมสนุกจังเลย เขียนโปรแกรมสนุกจเลย\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 7,
    "id": "ff64b0b8-2dc8-4ccd-bcee-5caf26185c29",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter number: 3\n",
-      "Enter text: เขียนโปรแกรมสนุกจเลย\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "เขียนโปรแกรมสนุกจเลย เขียนโปรแกรมสนุกจเลย เขียนโปรแกรมสนุกจเลย\n"
+      "you you you you you\n"
      ]
     }
    ],
@@ -293,31 +248,24 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "# Exercise 6 : เขียนโปรแกรมแสดงผลลัพธ์การจับคู่ที่เป็นไปได้ เมื่อให้ input เป็น list ของ string\r\n",
-    "a.\tExample:\r\n",
-    "i.\tInput[“Orange”, “Pineapple”, “Mango”]”]\r\n",
-    "ii.\tOutput: \r\n",
-    "[('Orange', 'Pineapple'),\r\n",
-    "('Orange', 'Mango'),\r\n",
-    "('Pineapple', 'Orange'),\r\n",
-    "('Pineapple', 'Mango'),\r\n",
-    "('Mango', 'Orange'),\r\n",
-    "('Mango', 'Pinapple')]\r\n"
+    "# Exercise 6 : เขียนโปรแกรมแสดงผลลัพธ์การจับคู่ที่เป็นไปได้ เมื่อให้ input เป็น list ของ string\n",
+    "a.\tExample:\n",
+    "i.\tInput[“Orange”, “Pineapple”, “Mango”]”]\n",
+    "ii.\tOutput: \n",
+    "[('Orange', 'Pineapple'),\n",
+    "('Orange', 'Mango'),\n",
+    "('Pineapple', 'Orange'),\n",
+    "('Pineapple', 'Mango'),\n",
+    "('Mango', 'Orange'),\n",
+    "('Mango', 'Pinapple')]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "id": "b174ffd2-6562-46ca-9134-4d704001ed35",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter list string: [“Orange”, “Pineapple”, “Mango”]\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -329,7 +277,7 @@
        " ('Mango', 'Pineapple')]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,26 +312,19 @@
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "# Exercise 7 : เขียน function ที่ใช้หา domain name จาก email ที่รับมา\r\n",
-    "a.\tExample:\r\n",
-    "i.\tInput: user@domain.com\r\n",
-    "ii.\tOutput: domaion.m\r\n",
+    "# Exercise 7 : เขียน function ที่ใช้หา domain name จาก email ที่รับมา\n",
+    "a.\tExample:\n",
+    "i.\tInput: user@domain.com\n",
+    "ii.\tOutput: domaion.m\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "id": "e85b6850-8428-4b7e-a67e-438cdc44d89a",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter email: user@domain.com\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -408,30 +349,23 @@
    "id": "c4f516c2-f61f-494a-987f-5bb9696cf407",
    "metadata": {},
    "source": [
-    "# Exercise 8 : เขียน function ในการคำนวนหาค่า factorial โดย factorial คือผลคูณของจำนวนเต็มบวกทั้งหมดที่น้อยกว่าหรือเท่ากับ n โดย function จะรับ input เป็นจำนวณเต็มบวก\r\n",
-    "a.\tExample:\r\n",
-    "i.\tInput: 5\r\n",
-    "ii.\tOutput: 120\r\n"
+    "# Exercise 8 : เขียน function ในการคำนวนหาค่า factorial โดย factorial คือผลคูณของจำนวนเต็มบวกทั้งหมดที่น้อยกว่าหรือเท่ากับ n โดย function จะรับ input เป็นจำนวณเต็มบวก\n",
+    "a.\tExample:\n",
+    "i.\tInput: 5\n",
+    "ii.\tOutput: 120\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "id": "690a7f9e-8639-4b4e-8dc8-083dbfc285f0",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter number: 5\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "120\n"
+      "720\n"
      ]
     }
    ],
@@ -453,15 +387,15 @@
    "id": "7677e02e-b441-4dbe-83fe-8ce3eb838fc8",
    "metadata": {},
    "source": [
-    "# Exercise 9 : เขียน class พนักงาน โดยจะต้องมี attribute ที่สำคัญอย่างน้อย 5 attribute และมี method ที่สำคัญ อย่างน้อย 2 method\r\n",
-    "\tตัวอย่าง Attribute เช่น ชื่อ รหัสพนักงาน เงินเดือน\r\n",
-    "\tตัวอย่าง Method เช่น work(\r\n",
+    "# Exercise 9 : เขียน class พนักงาน โดยจะต้องมี attribute ที่สำคัญอย่างน้อย 5 attribute และมี method ที่สำคัญ อย่างน้อย 2 method\n",
+    "\tตัวอย่าง Attribute เช่น ชื่อ รหัสพนักงาน เงินเดือน\n",
+    "\tตัวอย่าง Method เช่น work(\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 11,
    "id": "81083da8-3181-44aa-87d6-3c48966e44d9",
    "metadata": {},
    "outputs": [],
@@ -488,17 +422,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 13,
    "id": "e56d0b81-4aca-47b1-8aeb-b81ef663e916",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Mr_a = Employee(\"001\", \"Mr.a\", \"engineer\")"
+    "Mr_a = Employee(\"001\", \"Mr.a\", \"engineer\" , \"10000\" , \"reading\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 14,
    "id": "701eaada-3785-4214-9cb6-b723ce623d92",
    "metadata": {},
    "outputs": [
@@ -516,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 15,
    "id": "99f6637f-1deb-4f51-9934-2ee450edd690",
    "metadata": {},
    "outputs": [
@@ -543,7 +477,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "ENV1",
    "language": "python",
    "name": "python3"
   },
@@ -557,7 +491,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
