--- a/Training Day 1/Game_tic_tac_toe.ipynb
+++ b/Training Day 1/Game_tic_tac_toe.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 2,
    "id": "1ce3f5ac-eca3-4639-9416-1e0f22a98ab9",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 3,
    "id": "b6409cee-3f6b-42ae-8559-cbe7168a6368",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 6,
    "id": "53871e49-5a11-4587-9b6d-edf0b9dd154a",
    "metadata": {},
    "outputs": [
@@ -70,148 +70,71 @@
       "| 4 | 5 | 6 |\n",
       "+---+---+---+\n",
       "| 7 | 8 | 9 |\n",
-      "+---+---+---+\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Turn player X : 1\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "+---+---+---+\n",
-      "| X |   |   |\n",
       "+---+---+---+\n",
       "|   |   |   |\n",
       "+---+---+---+\n",
-      "|   |   |   |\n",
-      "+---+---+---+\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Turn player O : 5\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+---+---+---+\n",
-      "| X |   |   |\n",
-      "+---+---+---+\n",
-      "|   | O |   |\n",
+      "|   | X |   |\n",
       "+---+---+---+\n",
       "|   |   |   |\n",
-      "+---+---+---+\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Turn player X : 9\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "+---+---+---+\n",
+      "+---+---+---+\n",
+      "| O |   |   |\n",
+      "+---+---+---+\n",
+      "|   | X |   |\n",
+      "+---+---+---+\n",
+      "|   |   |   |\n",
+      "+---+---+---+\n",
+      "+---+---+---+\n",
+      "| O |   |   |\n",
+      "+---+---+---+\n",
+      "|   | X |   |\n",
       "+---+---+---+\n",
       "| X |   |   |\n",
       "+---+---+---+\n",
-      "|   | O |   |\n",
       "+---+---+---+\n",
-      "|   |   | X |\n",
-      "+---+---+---+\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Turn player O : 7\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "| O |   | O |\n",
+      "+---+---+---+\n",
+      "|   | X |   |\n",
       "+---+---+---+\n",
       "| X |   |   |\n",
       "+---+---+---+\n",
-      "|   | O |   |\n",
       "+---+---+---+\n",
-      "| O |   | X |\n",
-      "+---+---+---+\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Turn player X : 3\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "| O | X | O |\n",
       "+---+---+---+\n",
-      "| X |   | X |\n",
+      "|   | X |   |\n",
       "+---+---+---+\n",
-      "|   | O |   |\n",
+      "| X |   |   |\n",
       "+---+---+---+\n",
-      "| O |   | X |\n",
-      "+---+---+---+\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Turn player O : 2\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "+---+---+---+\n",
+      "| O | X | O |\n",
+      "+---+---+---+\n",
+      "|   | X |   |\n",
+      "+---+---+---+\n",
+      "| X | O |   |\n",
+      "+---+---+---+\n",
+      "+---+---+---+\n",
+      "| O | X | O |\n",
+      "+---+---+---+\n",
+      "| X | X |   |\n",
+      "+---+---+---+\n",
+      "| X | O |   |\n",
+      "+---+---+---+\n",
+      "+---+---+---+\n",
+      "| O | X | O |\n",
+      "+---+---+---+\n",
+      "| X | X | O |\n",
+      "+---+---+---+\n",
+      "| X | O |   |\n",
+      "+---+---+---+\n",
+      "+---+---+---+\n",
+      "| O | X | O |\n",
+      "+---+---+---+\n",
+      "| X | X | O |\n",
       "+---+---+---+\n",
       "| X | O | X |\n",
       "+---+---+---+\n",
-      "|   | O |   |\n",
-      "+---+---+---+\n",
-      "| O |   | X |\n",
-      "+---+---+---+\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Turn player X : 6\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+---+---+---+\n",
-      "| X | O | X |\n",
-      "+---+---+---+\n",
-      "|   | O | X |\n",
-      "+---+---+---+\n",
-      "| O |   | X |\n",
-      "+---+---+---+\n",
-      "Player X >>> WIN\n"
+      "Players X/O >>> Draw\n"
      ]
     }
    ],
@@ -260,7 +183,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "ENV1",
    "language": "python",
    "name": "python3"
   },
@@ -274,7 +197,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
